--- a/style.css
+++ b/style.css
@@ -1,4 +1,13 @@
 h1 {
-color: orange;
+color: blue;
 text-align: center;
+}
+
+/* This create the orange square example. */
+div {
+  width: 100px;
+  height: 100px;
+  background-color: orange;
+  margin: 10px;
+  border-radius: 10px;
 }
