Drop down and 2nd pie chart
Added the drop down box and canvas for the second pie chart in the html file. In the css file you can find the dimension for the drop down menu.

--- a/style.css
+++ b/style.css
@@ -56,6 +56,12 @@ button {
   font-size: 16px;
 }
 
+/* gives the drop down its features*/
+select{
+  width: 150px;
+  height: 40px;
+}
+
 /* Hover effect for the buttons */
 button:hover {
   background-color: #45a049;
