--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ canvas {
 .login-button {
   font-size: 18px;
   padding: 8px 10px;
-  background-color: #007BFF;
+  background-color: #066a7b;
   color: white;
   border: none;
   border-radius: 5px;
@@ -115,13 +115,13 @@ canvas {
 }
 
 .login-button:hover {
-  background-color: #0056b3;
+  background-color: #45a049;
 }
 
 .createUser-button {
   font-size: 18px;
   padding: 8px 10px;
-  background-color: #007BFF;
+  background-color: #066a7b;
   color: white;
   border: none;
   border-radius: 5px;
@@ -130,7 +130,7 @@ canvas {
 }
 
 .createUser-button:hover {
-  background-color: #0056b3;
+  background-color: #45a049;
 }
 
 .main-container {
@@ -138,7 +138,7 @@ canvas {
   justify-content: space-between; /* Ensures that the left and right sections are spaced out */
   width: 90%; /* Adjust the width as per your layout preference */
   max-width: 1200px; /* Limit the width for larger screens */
-  background-color: white;
+  background-color: rgb(137, 231, 231);
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
@@ -194,7 +194,7 @@ canvas {
   width: 100%;
   padding: 10px;
   font-size: 16px;
-  background-color: #007BFF;
+  background-color: #066a7b;
   color: white;
   border: none;
   border-radius: 5px;
@@ -206,7 +206,7 @@ canvas {
   width: 100%;
   padding: 10px;
   font-size: 16px;
-  background-color: #007BFF;
+  background-color: #066a7b;
   color: white;
   border: none;
   border-radius: 5px;
@@ -215,11 +215,11 @@ canvas {
 }
 
 .left-section .submitIncome-button:hover {
-  background-color: #0056b3;
+  background-color: #13adc8;
 }
 
 .left-section .submitExpenses-button:hover {
-  background-color: #0056b3;
+  background-color: #13adc8;
 }
 
 
@@ -342,14 +342,14 @@ table tbody tr:nth-child(even) {
   background-color: rgba(0, 0, 0, 0.5); /* Black background with opacity */
 }
 
-/* Popup content */
+/* Popup content for login menu */
 .popup-content {
   position: relative;
-  background-color: #fff;
+  background-color: #daeeff;
   margin: 15% auto; /* Center it */
-  padding: 20px;
+  padding: 10px;
   border-radius: 8px;
-  width: 30%; /* Adjust width as needed */
+  width: 25%; /* Adjust width as needed */
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
@@ -381,10 +381,10 @@ table tbody tr:nth-child(even) {
   top: 50%; /* 50% from the top */
   left: 50%; /* 50% from the left */
   transform: translate(-50%, -50%); /* Centers the element */
-  background: #fff;
+  background: #daeeff;
   padding: 20px;
   width: 90%; /* Adjust width as needed */
-  max-width: 600px; /* Set a maximum width */
+  max-width: 425px; /* Set a maximum width */
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
   border-radius: 8px;
 }
@@ -412,7 +412,7 @@ table tbody tr:nth-child(even) {
 .create-user-popup-content input {
   width: 100%;
   padding: 10px;
-  border: 1px solid #ccc;
+  border: 1px solid #05869d;
   border-radius: 5px;
   font-size: 1rem;
   transition: all 0.3s ease;
@@ -425,7 +425,7 @@ table tbody tr:nth-child(even) {
 
 .create-user-popup-content .submit-button {
   background-color: #05869d;
-  color: white;
+  color: rgb(255, 255, 255);
   padding: 12px 20px;
   border: none;
   border-radius: 5px;
