--- a/style.css
+++ b/style.css
@@ -322,12 +322,32 @@ table th, table td {
 }
 
 table th {
-  background-color: #007BFF;
+  background-color: #066a7b;
   color: white;
 }
 
-table tbody tr:nth-child(even) {
-  background-color: #f9f9f9;
+table tbody tr:nth-child(2) {
+  background-color: #1E90FF;
+}
+
+table tbody tr:nth-child(3) {
+  background-color: #87CEFA;
+}
+
+table tbody tr:nth-child(4) {
+  background-color: #4682B4;
+}
+
+table tbody tr:nth-child(5) {
+  background-color: #5F9EA0;
+}
+
+table tbody tr:nth-child(6) {
+  background-color: #00CED1;
+}
+
+table tbody tr:nth-child(7) {
+  background-color: #6495ED;
 }
 
 /* Popup container styling */
